--- a/DNAOrderApp/order/templates/order/fmprojectlist.html
+++ b/DNAOrderApp/order/templates/order/fmprojectlist.html
@@ -87,8 +87,64 @@ console.log(affiliated_institute_source);
 // 		$("#current-affiliated-institute-list-"+projid).append("<li><a href=\"#\">" + affiliated_institute_source[i] + "<i class=\"icon-remove close\" data-dismiss=\"alert\"></i></a></li>");
 // }
 
+//Passing projid to modal button 
+function addAttributeToModalButton(attribute, value){
+	$("#next-tss-button").attr(attribute, value);
+	return false;
+}
+
+
+
+var tss_pages = ['tss-page-2', 'tss-page-3', 'tss-page-4'];
+
 $(document).ready(function() {
 	$(".collapse").collapse();
+
+	$("#add-ss-button").click( function(data){
+		var value = $(this).attr("project-id");
+		addAttributeToModalButton('project-id', value);
+		addAttributeToModalButton('target', 'tss-page-2');
+
+		$("#save-tss-button").attr('project-id', value);
+	});
+
+	// Save Sample Name and Sample Num
+	$('#save-tss-button').click( function(data){
+		var projid = $(this).attr("project-id");
+		$("#add_a_tmp_ss_form").ajaxSubmit({
+												url: '/order/add_tmp_ss/'+projid,
+												type: "POST",
+												resetForm : true,
+												headers : {"X-CSRFToken" : csrftoken},
+												success : function(data) {
+																			console.log("success" + data);
+																			$("#tmp-sample-submission-modal-body").replaceWith(data);
+																			$('#next-tss-button').removeAttr('disabled');
+																			$('input[name=tmp_sample_submission_name]').attr('disabled', 'disabled');
+																			$('input[name=tmp_sample_num]').attr('disabled', 'disabled');
+																			addAttributeToModalButton('target', tss_pages[0]);
+																			var tss = $('#add_a_tmp_ss_form').attr('tss');
+																			addAttributeToModalButton('tss', tss);
+												},
+												error : function(data) {
+																			$('div#alert-signs').html("<div class=\"alert alert-error\"><b>Uh Oh! </b> Ajax Failed! </div>");
+												}
+		});
+	});
+
+	//To Add Temporary Sample Submission 
+	$('#next-tss-button').click( function(data){
+		var target = $(this).attr("target");
+		var tss = $('#add_a_tmp_ss_form').attr('tss');
+		var tss = $(this).attr('tss');
+		console.log(target);
+		console.log(tss);
+		$.get(target+'/'+tss+'/', function(data){
+			console.log(data);
+			$("#tmp-sample-submission-modal-body").replaceWith(data);
+			$('#save-tss-button').attr('disabled', 'disabled');
+		});
+	});
 
 	// To Add Projects
 	$('#add-a-project-button').click( function(data){
@@ -193,9 +249,6 @@ $(document).ready(function() {
 
 															}
 		});
-	
-		
-
 	});
 
 	// Attach popover with each "[+] Add Phenotypes" link
@@ -400,10 +453,35 @@ $(document).ready(function() {
 });
 });
 
-	
+// Add Temporary Phenotype
+// To Add a Phenotype
+function addTempPhenotype(tssid){
+	console.log("in addtempphenotype");
+	console.log("ID: " + tssid);
 
-	
+	$("#add_a_temp_phenotype_form_"+tssid).ajaxSubmit({
+		url: '/order/tss-page-2/'+tssid,
+		type: "POST",
+		resetForm : true,
+		headers : {"X-CSRFToken" : csrftoken},
+		success : function(data) {
+			console.log("successfully add phenotype");
+			console.log("this is addphenotype" + data);
 
+			$('#tmp-sample-submission-modal-body').replaceWith(data);
+			addAttributeToModalButton('target', tss_pages[1]);
+			addAttributeToModalButton('tss', tssid);
+			$('#save-tss-button').attr('disabled', 'disabled');
+			// $('div#alert-signs').html("<div class=\"alert alert-success\"><b>Good Job!</b> You have successfully added a Phenotype!</div>");
+
+		},
+		error : function(data) {
+			console.log("failed to add phenotype");
+			$('div#alert-signs').html("<div class=\"alert alert-error\"><b>Uh Oh! </b> Ajax Failed! </div>");
+		}
+	});
+	return false;
+}
 
 
 // To Add a Phenotype
@@ -452,6 +530,7 @@ function deletePhenotype(elt) {
 
 	return false;
 }
+
 
 // function getPhenotypeList(elt){
 // 	console.log("getpheno!")
@@ -630,61 +709,7 @@ border:solid 1px #c3c3c3;
 											<td>{{ ss.date_created }}</td>
 											<td>{{ ss.last_updated }}</td>
 										</tr>
-										{% if forloop.last %}
-										<!-- THIS IS THE EMPTY CASE -->
-										<tr>
-											<td>
-												{{ samplesubmissionform.sample_submission_name.errors }}
-												{{ samplesubmissionform.sample_submission_name.label_tag }}
-												{{ samplesubmissionform.sample_submission_name }}
-											</td>
-											<td>
-												<!-- PHENOTYPES!!!! -->
-												<div style="display:none" id="empty-phenotype-table-container{{proj.pk}}">
-													<table class="table table-striped table-bordered table-hover" name="empty-phenotype-table" id="empty-phenotype-table{{proj.pk}}" value="{{proj.pk}}" >
-														<tr>
-															<th> Phenotype Name </th>
-															<th> Phenotype Type </th>
-															<th> Phenotype Description </th>
-															<th> Phenotype Definition </th>
-														</tr>
-														
-													</table> 
-												</div>
-												<a href="#" class="trigger-empty-phenolist-popover pull-right" data-toggle="modal" value="{{proj.pk}}" id="trigger-empty-phenolist-popover{{proj.pk}}" rel="popover" data-container="body">[+] Add Phenotypes</a>
-												<!-- END OF PHENOTYPES -->
-											</td>
-											<td>
-												<div class="alert alert-block">
-												<form id="affiliated-institute-form-{{proj.pk}}">
-													{% csrf_token %}
-													{{ proj.pk|create_aiform }}
-													<a href="#" class="save-ai-button pull-right" id="save-ai-button-{{proj.pk}}" type="button" value="{{proj.pk}}">Save</a>
-												</form>
-												</div>
-											</td>
-											<td>
-												Contact List
-												<form id="contact-list-form-{{proj.pk}}">
-													<input id="contact-list-input-{{proj.pk}}" type="text" data-provide="typeahead" autocomplete="off">
-
-													<ul id="current-contact-list-{{proj.pk}}" class="nav nav-pills nav-stacked">
-													</ul>
-													<a href="#" class="save-contact-button pull-right" id="save-contact-button-{{proj.pk}}" type="button" value="{{proj.pk}}">Save</a>
-												</form>
-											</td>
-											<td>
-												{{ samplesubmissionform.sample_num.errors }}
-												{{ samplesubmissionform.sample_num.label_tag }}
-												{{ samplesubmissionform.sample_num }}
-											</td>
-											<td></td>
-											<td></td>
-											<td></td>
-										</tr>
-										{% endif %}
 										{% empty %}
-
 										<tr>
 											<td></td>
 											<td></td>
@@ -722,7 +747,8 @@ border:solid 1px #c3c3c3;
 
 
 								</table>
-								<a href="#" type="button" class="pull-right"> [+] Save Sample Submission </a>
+								<a href="add_tmp_ss/{{proj.pk}}" id="add-ss-button" role="button" class="pull-right" class="btn" data-toggle="modal" project-id="{{proj.pk}}" onclick="addAttributeToModalButton('project-id', {{proj.pk}})" data-target="#add-sample-submission-modal"> [+] Add Sample Submission </a>
+
 								<br />
 								<br />
 							</div>
@@ -754,9 +780,28 @@ border:solid 1px #c3c3c3;
 		<br />
 		<br />
 
+		<!--*********************************** MODAL FOR ADDING SAMPLE SUBMISSION ********************************************-->
+		<div id="add-sample-submission-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="add-sample-submission-label" aria-hidden="true">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+				<h3 id="add-sample-submission-label">Add Sample Submission</h3>
+			</div>
+			<div class="modal-body" id="tmp-sample-submission-modal-body">
+			</div>
+			<div class="modal-footer">
+				<button id="save-tss-button" role="button" class="btn">Save</button>
+				<button id="next-tss-button" role="button" class="btn" target="" disabled>Next</button>
+			</div>
+		</div>
+
+		<!--***************************************** END OF MODAL ************************************************************-->
+
 
 	</div>
 </div>
+
+
+
 
 
 {% endblock content %}
