before I start rewriting the form submissions

--- a/DNAOrderApp/order/templates/order/base_template.html
+++ b/DNAOrderApp/order/templates/order/base_template.html
@@ -55,6 +55,12 @@
     	<!--[if lt IE 9]>
       		<script src="../../static/bootstrap/js/html5shiv/dist/html5shiv.js"></script>
     	<![endif]-->
+
+    	<!-- resizeable icons from http://fortawesome.github.io/Font-Awesome/ -->
+		<link rel="stylesheet" href="{{ STATIC_URL }}font-awesome/css/font-awesome.min.css">
+		<!--[if IE 7]>
+  			<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome-ie7.min.css">
+		<![endif]-->
 	</head>
 	
 	<body>
