--- a/DNAOrderApp/order/templates/order/tmp-sample-submission-3.html
+++ b/DNAOrderApp/order/templates/order/tmp-sample-submission-3.html
@@ -1,5 +1,5 @@
 
-<div class="modal-body" id="tmp-sample-submission-modal-body">
+<div class="modal-body" id="tmp-sample-submission-modal-body" name="3">
 	<h3> Affiliated Institute </h3>
 
 	<div id="alert-signs">
@@ -7,7 +7,7 @@
 	</div>
 
 	<div class="alert alert-block">
-		<form id="tmp-affiliated-institute-form-{{tssid}}">
+		<form id="tmp-affiliated-institute-form-{{tssid}}" class="add_a_temp_ss">
 			{% csrf_token %}
 			{{ tssaiform }}
 			<a href="#" class="save-tmp-ai-button pull-right" id="save-tmp-ai-button-{{tssid}}" type="button" value="{{tssid}}">Save</a>
