fixed the phenotype form - now can add phenotypes. Also models - I've made that tmp_ss, tmp_phenotype+name, tmp_phenotype_type to be unique together, so that different sample submissions can share the same phenotype name and type. Also phenotypes can have the same name but represented by different phenotype type.

--- a/DNAOrderApp/order/templates/order/fmprojectlist.html
+++ b/DNAOrderApp/order/templates/order/fmprojectlist.html
@@ -542,7 +542,7 @@ function addTempPhenotype(tssid){
 	console.log("in addtempphenotype");
 	console.log("ID: " + tssid);
 
-	$("#add_a_temp_phenotype_form_"+tssid).ajaxSubmit({
+	$("#add_a_temp_phenotype_form").ajaxSubmit({
 		url: '/order/tss-page-2/'+tssid,
 		type: "POST",
 		resetForm : true,
