--- a/DNAOrderApp/order/templates/order/tmp-sample-submission-3.html
+++ b/DNAOrderApp/order/templates/order/tmp-sample-submission-3.html
@@ -1,16 +1,15 @@
-
 <div class="modal-body" id="tmp-sample-submission-modal-body" name="3">
 	<h3> Affiliated Institute </h3>
 
+	<form class="add_a_temp_ss" method="post" id="tmp-affiliated-institute-form" tssid="{{tssid}}" action="tss-page-3/{{tssid}}">
+		{% csrf_token %}
+		<table>
+			{{ tssaiform }}
+		<!-- <a href="#" class="save-tmp-ai-button pull-right" id="save-tmp-ai-button-{{tssid}}" type="button" value="{{tssid}}">Save</a> -->
+		</table>
+	</form>
+	
 	<div id="alert-signs">
 		{{ alert_msg|safe }}
-	</div>
-
-	<div class="alert alert-block">
-		<form id="tmp-affiliated-institute-form-{{tssid}}" class="add_a_temp_ss">
-			{% csrf_token %}
-			{{ tssaiform }}
-			<a href="#" class="save-tmp-ai-button pull-right" id="save-tmp-ai-button-{{tssid}}" type="button" value="{{tssid}}">Save</a>
-		</form>
 	</div>
 </div>
