--- a/DNAOrderApp/order/templates/order/tmp-sample-submission-4.html
+++ b/DNAOrderApp/order/templates/order/tmp-sample-submission-4.html
@@ -1,5 +1,5 @@
 <div class="modal-body" id="tmp-sample-submission-modal-body" name="4">
-THIS IS TSS PAGE 4
+	<h3> Contact List </h3>
 
 	<form class="add_a_temp_ss">
 	</form>
