--- a/DNAOrderApp/order/templates/order/tmp-sample-submission-4.html
+++ b/DNAOrderApp/order/templates/order/tmp-sample-submission-4.html
@@ -1,7 +1,36 @@
 <div class="modal-body" id="tmp-sample-submission-modal-body" name="4">
 	<h3> Contact List </h3>
 
-	<form class="add_a_temp_ss">
+	<div id="alert-signs">
+		{{ alert_msg|safe }}
+	</div>
+
+	<!-- Taken from contacts-table-fmpage -->
+
+	<div id="temp-contacts-table-container{{tss.pk}}">
+		<table class="table table-striped table-bordered table-hover" name="temp-contacts-table" value="{{tssid}}" id ="temp-contacts-table{{tssid}}" ss-name="{{ ss_name }}">
+			<tr>
+				<th> Contact Username </th>
+				<th> Email </th>
+				<th> Affiliated Institute </th>
+				<th> Last Login </th>
+				<th> Date Joined </th>
+			</tr>
+			{% for u in tempuserlist_all %}
+			<tr id="{{u.pk}}">
+			</tr>
+			{% endfor %}
+		</table>
+	</div>
+
+	<form class="add_a_temp_ss" method="post">
+		{% csrf_token %}
+		<table id="tssuserformtable">
+			{{ tssuserform }}
+		</table>
+		<button id="add-temp-pheno-button" class="btn btn-primary" type="button" onclick="addTempPhenotype({{tssid}})">
+			Add a User
+		</button>
 	</form>
 
 </div>
