--- a/DNAOrderApp/order/templates/order/tmp-sample-submission-2.html
+++ b/DNAOrderApp/order/templates/order/tmp-sample-submission-2.html
@@ -36,7 +36,7 @@
 				{{ tssphenoform }}
 			</table>
 			<br />
-			<button id="add-temp-pheno-button" class="btn btn-primary" type="button" onclick="addTempPhenotype({{tssid}})">
+			<button id="add-temp-pheno-button" class="btn btn-primary" type="button" onclick="addTempContact({{tssid}})">
 				Create a Phenotype
 			</button>
 		</form>
