--- a/DNAOrderApp/order/templates/order/tmp-sample-submission-4.html
+++ b/DNAOrderApp/order/templates/order/tmp-sample-submission-4.html
@@ -10,27 +10,37 @@
 	<div id="temp-contacts-table-container{{tss.pk}}">
 		<table class="table table-striped table-bordered table-hover" name="temp-contacts-table" value="{{tssid}}" id ="temp-contacts-table{{tssid}}" ss-name="{{ ss_name }}">
 			<tr>
-				<th> Contact Username </th>
+				<th> Username </th>
+				<th> First Name </th>
+				<th> Last Name </th>
 				<th> Email </th>
-				<th> Affiliated Institute </th>
+				<th> Affiliated Institute(s) </th>
 				<th> Last Login </th>
 				<th> Date Joined </th>
 			</tr>
 			{% for u in tempuserlist_all %}
 			<tr id="{{u.pk}}">
+				<td>{{ u.username }}</td>
+				<td>{{ u.first_name }}</td>
+				<td>{{ u.last_name }}</td>
+				<td>{{ u.email }}</td>
+				<td>{{ u.affiliated_institute }}</td>
+				<td>{{ u.last_login }}</td>
+				<td>{{ u.date_joined }}</td>
 			</tr>
 			{% endfor %}
 		</table>
 	</div>
-
-	<form class="add_a_temp_ss" method="post">
+	<div id="add_a_temp_contacts_panel">
+	<form class="add_a_temp_ss" method="post" id="add_a_temp_contact_form" tssid="{{tssid}}" action="tss-page-4/{{ tssid }}">
 		{% csrf_token %}
 		<table id="tssuserformtable">
 			{{ tssuserform }}
 		</table>
-		<button id="add-temp-pheno-button" class="btn btn-primary" type="button" onclick="addTempPhenotype({{tssid}})">
+		<button id="add-temp-pheno-button" class="btn btn-primary" type="button" onclick="addTempContact({{tssid}})">
 			Add a User
 		</button>
 	</form>
+	</div>
 
 </div>
