--- a/DNAOrderApp/order/templates/order/tmp-sample-submission-4.html
+++ b/DNAOrderApp/order/templates/order/tmp-sample-submission-4.html
@@ -6,6 +6,7 @@
 	</div>
 
 	<!-- Taken from contacts-table-fmpage -->
+	{% load get_affiliated_institute_list %}
 
 	<div id="temp-contacts-table-container{{tss.pk}}">
 		<table class="table table-striped table-bordered table-hover" name="temp-contacts-table" value="{{tssid}}" id ="temp-contacts-table{{tssid}}" ss-name="{{ ss_name }}">
@@ -24,7 +25,7 @@
 				<td>{{ u.first_name }}</td>
 				<td>{{ u.last_name }}</td>
 				<td>{{ u.email }}</td>
-				<td>{{ u.affiliated_institute }}</td>
+				<td>{{ u.affiliated_institute|get_all_affiliated_institute_for_tss4|safe }}</td>
 				<td>{{ u.last_login }}</td>
 				<td>{{ u.date_joined }}</td>
 			</tr>
