--- a/DNAOrderApp/order/templates/order/tmp-sample-submission-5.html
+++ b/DNAOrderApp/order/templates/order/tmp-sample-submission-5.html
@@ -1,9 +1,74 @@
-<div class="modal-body" id="tmp-sample-submission-modal-body" name="2">
-	<div id="alert-signs">
-		{{ alert_msg|safe }}
-	</div>
+<div class="modal-body" id="tmp-sample-submission-modal-body" name="5">
+	<div class="container">
+		<div id="alert-signs">
+			{{ alert_msg|safe }}
+		</div>
 
-	This is TSS PAGE 5! Check if all data is correct?
-	<br />
-	Then Submit.
+		<h3> Is all the data that you've inputted correct? </h3>
+		<br />
+		<table class="table table-striped" id="summary-table" value="{{tssid}}">
+			<tr>
+				<td> Temporary Sample Submission Name: </td>
+				<td> {{ tss.tmp_sample_submission_name }}</td>
+			</tr>
+			<tr> 
+				<td> Temporary Sample Number: </td>
+				<td> {{ tss.tmp_sample_num }}</td>
+			</tr>
+			<tr>
+				<td> Phenotype List: </td>
+				{% load get_phenotype_type %}
+				<td>
+					<table class="table table-striped table-bordered table-hover" name="temp-phenotype-table" value="{{tssid}}" id ="temp-phenotype-table">
+						<tr>
+							<th> Phenotype Name </th>
+							<th> Phenotype Type </th>
+							<th> Phenotype Description </th>
+							<th> Phenotype Definition </th>
+						</tr>
+						{% for p in tssphenolist_all %}
+						<tr id="{{p.pk}}">
+							<td>{{ p.tmp_phenotype_name }}</td>
+							<td>{{ p.tmp_phenotype_type_id|get_phenotype_type_by_id }}</td>
+							<td>{{ p.tmp_phenotype_description }}</td>
+							<td>{{ p.tmp_phenotype_definition }}</td>
+						</tr>
+						{% endfor %}
+					</table> 
+				</td>
+			</tr>
+			<tr>
+				<td> Samples' Affiliated Institute </td>
+				<td> {{ tssai.tmp_ai_name }}</td>
+			</tr>
+			<tr>
+				<td> Contact List </td>
+				{% load get_affiliated_institute_list %}
+				<td>
+					<table class="table table-striped table-bordered table-hover" name="temp-contacts-table" value="{{tssid}}" id ="temp-contacts-table">
+						<tr>
+							<th> Username </th>
+							<th> First Name </th>
+							<th> Last Name </th>
+							<th> Email </th>
+							<th> Affiliated Institute(s) </th>
+							<th> Last Login </th>
+							<th> Date Joined </th>
+						</tr>
+						{% for u in tssdnaorderappuserlist_all %}
+						<tr id="{{u.pk}}">
+							<td>{{ u.username }}</td>
+							<td>{{ u.first_name }}</td>
+							<td>{{ u.last_name }}</td>
+							<td>{{ u.email }}</td>
+							<td>{{ u.affiliated_institute|get_all_affiliated_institute_for_tss4|safe }}</td>
+							<td>{{ u.last_login }}</td>
+							<td>{{ u.date_joined }}</td>
+						</tr>
+						{% endfor %}
+					</table>
+				</td>
+			</tr>
+		</table>
+	</div>
 </div>
